syntax = "proto3";
option go_package = "terrorsproto";

message StackFrame {
	string filename = 1;
	int32 line = 2;
	string method = 3;
}

message Error {
	string code = 1;
	string message = 2;
	map<string, string> params = 3;
	repeated StackFrame stack = 4;
	// We don't use google.protobuf.BoolValue as it doesn't serialize properly without jsonpb.
	BoolValue retryable = 5;
	int32 marshal_count = 6;
	repeated string message_chain = 7;
	BoolValue unexpected = 8;
}

message BoolValue {
	bool value = 1;
}